# arkcompiler_ets_frontend

./: .gitignore  AGENTS.md  BUILD.gn  CODEOWNERS  OAT.xml  README.md  README_zh.md  ark_config.gni  ark_root.gni  bundle.json  codecheck_ignore.json  ets_frontend_config.gni  test_helper.gni
es2panda/: AGENTS.md  BUILD.gn  CMakeLists.txt  es2abc_config.gni  es2panda.cpp  es2panda.h
es2panda/aot/: AGENTS.md  emitFiles.cpp  emitFiles.h  main.cpp  options.cpp  options.h  resolveDepsRelation.cpp  resolveDepsRelation.h
es2panda/binder/: AGENTS.md  binder.cpp  binder.h  declaration.cpp  declaration.h  module.cpp  module.h  scope.cpp  scope.h  variable.cpp  variable.h  variableFlags.h
es2panda/compiler/: AGENTS.md
es2panda/ir/: AGENTS.md  astNode.h  astNodeMapping.h  inValidNode.h  irnode.h  typeNode.h
es2panda/lexer/: AGENTS.md  keywordsUtil.cpp  lexer.cpp  lexer.h
es2panda/parser/: AGENTS.md  commonjs.cpp  expressionParser.cpp  parserFlags.h  parserImpl.cpp  parserImpl.h  statementParser.cpp
es2panda/scripts/: AGENTS.md  gen_isa.sh  gen_keywords.sh  generate_js_bytecode.py  ts2abc.js
es2panda/test/: BUILD.gn  config.py  runner.py  test262skiplist.txt  test_tsc_ignore_list.txt
es2panda/typescript/: AGENTS.md  checker.h
es2panda/unittest/: BUILD.gn
es2panda/util/: base64.cpp  base64.h  commonUtil.cpp  commonUtil.h  compositeHelpers.h  concurrent.cpp  concurrent.h  dumper.cpp  dumper.h  helpers.cpp  helpers.h  hotfix.cpp  hotfix.h  moduleHelpers.cpp  moduleHelpers.h  patchFix.cpp  patchFix.h  programCache.h  symbolTable.cpp  symbolTable.h  ustring.h  workerQueue.cpp
ets2panda/: AGENTS.md  AUTHORS  BUILD.gn  CMakeLists.txt  README.md  REVIEWERS  es2panda.cpp  es2panda.h  ets2abc_config.gni
ets2panda/aot/: BUILD.gn  CMakeLists.txt  main.cpp  options.cpp  options.h
ets2panda/arkts_bindings/: CMakeLists.txt  README.md  arktsconfig.in.json
ets2panda/ast_verifier/: AGENTS.md  ASTVerifier.cpp  ASTVerifier.h  README.md  arithmeticOperationValid.cpp  arithmeticOperationValid.h  checkAbstractMethod.cpp  checkAbstractMethod.h  checkConstProperties.cpp  checkConstProperties.h  checkContext.h  checkInfiniteLoop.cpp  checkInfiniteLoop.h  checkScopeDeclaration.cpp  checkScopeDeclaration.h  checkStructDeclaration.cpp  checkStructDeclaration.h  everyChildHasValidParent.cpp  everyChildHasValidParent.h  everyChildInParentRange.cpp  everyChildInParentRange.h  forLoopCorrectlyInitialized.cpp  forLoopCorrectlyInitialized.h  getterSetterValidation.cpp  getterSetterValidation.h  helpers.cpp  helpers.h  identifierHasVariable.cpp  identifierHasVariable.h  importExportAccessValid.cpp  importExportAccessValid.h  invariantBase.h  modifierAccessValid.cpp  modifierAccessValid.h  nodeHasParent.cpp  nodeHasParent.h  nodeHasSourceRange.cpp  nodeHasSourceRange.h  nodeHasType.cpp  nodeHasType.h  (+10 more)
ets2panda/binder/: ASBinder.cpp  ASBinder.h  ETSBinder.cpp  ETSBinder.h  JSBinder.cpp  JSBinder.h  TSBinder.cpp  TSBinder.h  TypedBinder.cpp  TypedBinder.h  binder.cpp  binder.h  declaration.cpp  declaration.h  enumMemberResult.h  privateBinding.h  recordTable.cpp  recordTable.h  scope.cpp  scope.h  tsBinding.h  variable.cpp  variable.h  variableFlags.h
ets2panda/bindings/: .gitignore  .prettierignore  BUILD.gn  README.md  build_bindings.py  jest.config.js  package-lock.json  package.json  tsconfig.json
ets2panda/checker/: AGENTS.md  ASchecker.cpp  ASchecker.h  CLAUDE.md  ETSAnalyzer.cpp  ETSAnalyzer.h  ETSAnalyzerHelpers.cpp  ETSAnalyzerHelpers.h  ETSAnalyzerUnreachable.cpp  ETSchecker.cpp  ETSchecker.h  JSchecker.cpp  JSchecker.h  SemanticAnalyzer.h  TSAnalyzer.cpp  TSAnalyzer.h  TSAnalyzerUnreachable.cpp  TSchecker.cpp  TSchecker.h  checker.cpp  checker.h  checkerContext.cpp  checkerContext.h  exportClosureResolver.cpp  exportClosureResolver.h  resolveResult.h
ets2panda/cmake/: coverage.cmake
ets2panda/declgen_ets2ts/: AGENTS.md  BUILD.gn  CMakeLists.txt  declgenEts2Ts.cpp  declgenEts2Ts.h  declgen_ets2ts_error.yaml  declgen_ets2ts_warning.yaml  isolatedDeclgenChecker.cpp  isolatedDeclgenChecker.h  isolated_declgen.yaml  main.cpp
ets2panda/docs/: AGENTS.md  README.md  cheatsheet.md  frontend-onboarding.md  import_export.md  lowering-phases.md
ets2panda/driver/: AGENTS.md
ets2panda/evaluate/: classDeclarationCreator.cpp  classDeclarationCreator.h  debugInfoStorage.cpp  debugInfoStorage.h  entityDeclarator.cpp  entityDeclarator.h  evaluateContext.h  helpers.cpp  helpers.h  importExportTable.h  irCheckHelper.cpp  irCheckHelper.h  nonRecursiveIrChecker.cpp  nonRecursiveIrChecker.h  pathResolver.h  proxyProgramsCache.h  proxyProgramsMap.cpp  proxyProgramsMap.h  scopedDebugInfoPlugin.cpp  scopedDebugInfoPlugin.h  varbinderScopes.h
ets2panda/ir/: annotationAllowed.h  astDump.cpp  astDump.h  astNode.cpp  astNode.h  astNodeFlags.h  astNodeHistory.cpp  astNodeHistory.h  astNodeMapping.h  brokenTypeNode.cpp  brokenTypeNode.h  errorTypeNode.cpp  errorTypeNode.h  expression.cpp  expression.h  irnode.cpp  irnode.h  jsDocAllowed.h  opaqueTypeNode.cpp  opaqueTypeNode.h  opcodeMap.h  srcDump.cpp  srcDump.h  statement.cpp  statement.h  typeNode.cpp  typeNode.h  typed.h  validationInfo.h
ets2panda/lexer/: AGENTS.md  ASLexer.cpp  ASLexer.h  CLAUDE.md  ETSLexer.cpp  ETSLexer.h  TSLexer.cpp  TSLexer.h  keywordString.h  keywords.cpp  keywordsBase.h  keywordsUtil.cpp  keywordsUtil.h  lexer.cpp  lexer.h
ets2panda/linter/: .eslintignore  .eslintrc.json  .gitignore  .npmrc  .prettierignore  AGENTS.md  BUILD.gn  CLAUDE.md  README.md  build_linter.py  compare-branches.py  compare_branches.py  eslint.config.mjs  migration-results-statistics.json  package-lock.json  package.json  rule-config.json  test_linter.sh  tsconfig-sdk.json  tsconfig.json  tslinter.bat  tslinter.sh  webpack.config.js
ets2panda/linter-4.2/: .eslintrc.json  .gitattributes  .gitignore  lint-gallery.txt  package.json  tsconfig-test.json  tsconfig.json  tslinter.cmd  tslinter.sh  webpack.config.js
ets2panda/lsp/: AGENTS.md  BUILD.gn  CMakeLists.txt  code_fix_register.h.erb  code_fix_register.rb
merge_abc/: AGENTS.md  BUILD.gn
(+21012 files in other folders)
